<resources>
    <string name="app_name">YujiaAPP</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="home">首页</string>
    <string name="my">我的</string>
    <string name="compen">理赔服务</string>
    <string name="lipeishenqing">理赔申请信息</string>
    <string name="yundannumber">运单号:</string>
    <string name="yundanpone">运单上电话:</string>
    <string name="lianxipeple">联系人:</string>
    <string name="lianxipone">联系人电话:</string>
    <string name="lipeicity">理赔公司所在城市:</string>
    <string name="lipeipepleOrCompany">理赔申请人或公司:</string>
    <string name="goodsname">货物名称:</string>
    <string name="shigutype">事故类型:</string>
    <string name="yichang_count">异常件数:</string>
    <string name="shenqing_account">申请金额:</string>
    <string name="lipei_reason">理赔原因:</string>
    <string name="title_activity_register">Register</string>
    <string name="agree">同意</string>
    <string name="xieyi">《注册协议》</string>
    <string name="title_activity_regist_agree">宇佳物流注册协议</string>
    <string name="agree_content1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;1、托运人应准确填写货物托运单，如实告知承运人所托运货物的名称、性质、重量、数量、价值等必要情况；托运人应对所托货物按照行业标准妥善包装，使其适合运输。
              \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;2、对于国家规定限制运输的物品，托运人应在交货前完成或委托承运人完成有关法律、行政法规规定的手续，并附有效凭证。
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;3、托运人不得托运或在所托运货物中夹带国家禁止运输的物品，因违背此约定造成承运人的一切损失托运人须双倍赔偿。&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4、承运人接受货物委托后，发现属于承运人法律法规禁止运输的物品（包括但不限于危险品、违禁品），承运人保留拒绝运送的权利，若该货物已在运输途中，承运人可以决定立即原返，托运人仍需支付货物应当支付的运费，因该批货物对承运人造成的各项损失由托运人承担，并由托运人承担承运人损失额2倍的违约金。
              \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;5、托运货物重量以千克为计量单位，不足1千克按照1千克计算。若体积重量大于实际重量，按体积重量计算。
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6、货运价格以承运人公布的《运费定额表》为准。依该价格计算得出的费用不包含接送货费、税金、政府规费以及由于托运人或收货人的原因而增加的其他费用。&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;7、收货人在收到提货通知后最迟应在三日内提货；收货人在此期限内未提货的应支付超出天数的仓储费和保管费，仓储费和保管费以承运人公布的价格为准。到货后三个月无人提货且承运人无法退回货物的，承运人对该货有权处置，在处置所得中优先扣除相关费用。
              \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n8、托运人或收货人不得无故拒付任何服务费用；收货人拒绝支付费用的，托运人承担支付与托运物品有关费用的连带责任。托运人或收货人无故不支付费用的，承运人可以对承运货物行使处置权、留置权及其他补救性权利，由此而产生的后果由托运人或收货人承担。
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;9、承运人从接受货物至收货人提货时止承担安全运输责任，在此期间若因承运人过失导致货物损坏、短缺、灭失、污染，承运人负赔偿责任。&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;10、承运人建议托运人办理货物保价运输，声明保价并支付相应保价费。托运人声明保价并支付保价费，发生货物丢损，承运人按如下规则赔偿：货物全部灭失，按货物保价声明价值赔偿；货物部分毁损或灭失，按声明价值和损失比例赔偿，最高不超过声明价值。声明价值高于实际价值的，按实际价值赔偿。
              \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;11、未办理保价而发生货物丢损，承运人对空运货物依照实际损失最高按20元（人民币）/千克赔偿，对汽运货物按照实际损失在丢损货物所对应运费的3倍以内赔偿。按以上方式计算得出的赔偿额超过货物实际价值的部分无效。
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;12、托运人委托承运人代收货款不代表该次货物的实际价值；如果运输货物在运输途中出现损坏或灭失赔偿额按照本条款第10、11条约定赔偿，与代收货款无关。收货人签名后因货物品名、性质、型号等原因而不支付代收货款，承运人不承担代收货款无法收回的责任。&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;13、以下物品不予托运：发票、有价证券、国家禁运的刊物、首饰、护照、私人证件、单证、合同、现金、私人信函、毒品、珠宝、玉器、古玩、字画、邮票、艺术品、稀有金属、液体物品、产地来源不正确的物品、有腐蚀性或放射性、易燃易爆品、白色粉末及一切有关法律禁止及难以客观确定价值的货物。
              \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;14、货运时效按照承运人的公布时效为准。时效不影响其他费用的结算和不可抗力免责权。
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;15、承运人对如下损失不承担责任：
A、因不可抗力（包括但不限于自然灾害、政府行为、战争等社会异常事件）造成货物损坏、短缺、灭失、污染、变质或迟延交付；
B、因货物本身的自然性质、质量瑕疵或缺陷、合理损耗等造成的损失；
C、托运人自行包装或容器不良，但从外部无法发现；
D、托运人自行包装，到达时外包装完好而内件缺少或损坏；
E、承运人包装的非新品运输，外包装完好而内件缺少或损坏；
F、由于托运人故意或过失导致货物出现损坏、少货等问题；
G、承运过程中发生的一切间接损失（包括但不限于对所托运货物的收益、利润、实际用途、特殊商业价值）。
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;16、凡因货物托运或与托运有关的争议，当事人可以通过协商或调解解决，协商或调解不成，任何一方可以向济南市天桥区人民法院提起诉讼。
              \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;17、本协议自托运人点击已阅读本协议确认注册之时起生效。
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;18、本协议最终解释权归承运人所有。&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="specil_agree">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;特别声明：本协议由托运人与承运人协商签订，不构成任何一方的格式合同，托运人已仔细阅读了本协议所有条款，
              \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;应托运人要求，承运人已做了相应条款的说明，托运人对本协议条款的含义及相应的法律后果已全部通过，托运人完全出于真实意思表示签署的本协议。
</string>
    <string name="title_activity_service_detail">ServiceDetail</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_buidu">BuiduActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
